--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Títudo do conteúdo</h1>
+        <h1>Títudo do conteúdo.</h1>
     </header>
     <nav>
         <a href="#">Inicial</a>
