--- a/exemplo/contato.html
+++ b/exemplo/contato.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo HTML5, CSS3</title>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="page-header">
         <h1>Exemplo uso HTML5, CSS3</h1>
     </header>
-    <nav>
-        <a href="index.html">Inicial</a>
-        <a href="contato.html">Contato</a>
+    <nav id="main-menu">
+        <a href="index.html" class="link">Inicial</a>
+        <a href="contato.html" class="link">Contato</a>
     </nav>
     <main>
-        <div>
+        <div id="contato">
             <h3>Contato</h3>
             <form>
                 <label>Nome</label>
@@ -35,8 +36,11 @@
             </form>
         </div>
     </main>
-    <footer>
-        Jemerson Fernando Maia <strong>Pós-Graduação em Desenvolvimento de Aplicações Web e Mobile</strong>
+    <footer id="page-footer">
+        <div>Jemerson Fernando Maia</div>
+        <div>
+            <strong>Pós-Graduação em Desenvolvimento de Aplicações Web e Mobile</strong>
+        </div>
     </footer>
 </body>
 </html>
