--- a/exemplo/index.html
+++ b/exemplo/index.html
@@ -7,7 +7,7 @@
     <title>Exemplo HTML5, CSS3</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style2.css" rel="stylesheet">
 </head>
 <body>
     <header id="page-header">
