--- a/atividade/index.html
+++ b/atividade/index.html
@@ -38,7 +38,7 @@
                     <article>
                         <h3>São Paulo vence o Liverpool e conquista o tricampeonato mundial</h3>
                         <h6>
-                            <small class="text-bold">18/12/2005</small>
+                            <small class="font-weight-bolder">18/12/2005</small>
                             <small class="float-right">contato@uol.com.br</small>
                         </h6>
                         <img src="img/img01.jpg" class="img-fluid">
